# 2.5d_lighting

./: CMakeLists.txt  README.md
models/: grass_blue.mtl  grass_blue.vox  grass_green.mtl  grass_green.vox  grass_red.mtl  grass_red.vox  rock_blue.mtl  rock_blue.vox  rock_green.mtl  rock_green.vox  rock_red.mtl  rock_red.vox
shaders/: composite.frag  light.frag
src/: config.h  helpers.c  main.c  model.c  model.h  renderer.c  world.c  world.h
